kubernetes-templating/cert-manager/kuard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - kuard.35.228.157.95.nip.io
    secretName: quickstart-example-tls
  rules:
  - host: kuard.35.228.157.95.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
